crates/rolldown_utils/tests/ui/pass_harness/fail_mutate_sealed.stderr
warning: variable does not need to be mutable
  --> tests/ui/pass_harness/fail_mutate_sealed.rs:38:8
   |
38 |   let (mut value, ()) = run_infallible_pass(FinalizePass, &mut pipeline, (), ());
   |        ----^^^^^
   |        |
   |        help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0596]: cannot borrow data in dereference of `Sealed<FinalValue>` as mutable
  --> tests/ui/pass_harness/fail_mutate_sealed.rs:39:3
   |
39 |   value.set(1);
   |   ^^^^^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `Sealed<FinalValue>`
